add index.html and css files

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <tilte> Lakydrick's First Website </tilte>
+        <title> Lakydrick's First Website </title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -9,7 +9,7 @@
         <div id="all-contents">
             <nav>
                 <h1> Lakydrick's First Website </h1>
-                <ul id="nav-li">
+                <ul id="nav-ul">
                     <li class="nav-li">
                         <a class="nav-a" href="index.html">Home</a>
                     </li>
