--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                       <a href="index.html"> Home </a>
                     </li>
                     <li>
-                      <a hfer="portfolio.html"> Portfolio </a>  
+                      <a href="portfolio.html"> Portfolio </a>  
                     </li>
                     <div class="nav-li">
 
