add index.html and css files

--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
             <main>
                 <!-- Sidebar section -->
                  <div class="sidebar">
-                     <img class="sidebar-img">
-                 </div>
-                <div>
-                    <img src="https://mail.google.com/mail/u/0/?ui=2&ik=f1a04ef936&attid=0.1&permmsgid=msg-f:1811186208149312086&th=1922a0429ed39256&view=fimg&disp=thd&attbid=ANGjdJ_nCfnZQRd0hm0UBlxVrbpcmwABYbB40QHg2vGEwB1fvopVQr-SnPxlwQHew7EtfIVuAvRBzcvdvaekuyCTr4OPRqDhDnwESraVkoLyz4O9TatJP-fu7OOYRxo&ats=2524608000000&sz=w958-h918">
+                    <img class="sidebar-img" src="https://mail.google.com/mail/u/0/?ui=2&ik=f1a04ef936&attid=0.1&permmsgid=msg-f:1811186208149312086&th=1922a0429ed39256&view=fimg&disp=thd&attbid=ANGjdJ88t0Zjpfmko_aAtCX1ePSVqxX9coUHrhI3mYUTteLP0TwjyXVhWfJuRsKzk-h3FaoM66EL-zWD5O4raZEg256h_iVOYeAqeLZ6W8PPZ-VG6j25nw4lRzxbj0k&ats=2524608000000&sz=w1920-h919">
                 </div>
+                
                 <!-- Content section -->
                  <div class="content">
 
