add index.html and css files

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <main>
                 <!-- Sidebar section -->
                  <div class="sidebar">
-                    <img class="sidebar-img" src="https://mail.google.com/mail/u/0/?ui=2&ik=f1a04ef936&attid=0.1&permmsgid=msg-f:1811186208149312086&th=1922a0429ed39256&view=fimg&disp=thd&attbid=ANGjdJ88t0Zjpfmko_aAtCX1ePSVqxX9coUHrhI3mYUTteLP0TwjyXVhWfJuRsKzk-h3FaoM66EL-zWD5O4raZEg256h_iVOYeAqeLZ6W8PPZ-VG6j25nw4lRzxbj0k&ats=2524608000000&sz=w1920-h919">
+                    <img class="sidebar-img" src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/detail/094.png">
                 </div>
-                
+
                 <!-- Content section -->
                  <div class="content">
 
